Fix execution counts and enhance output messages in JPEG Steganography notebook
- Updated execution counts for code cells to reflect the correct order of execution.
- Added detailed output messages for successful imports and operations, including warnings and timestamps.
- Improved error handling messages for EXIF errors during the hiding process.
- Removed redundant output messages and ensured clarity in the displayed information.

--- a/notebooks/test_jpeg_steganography.ipynb
+++ b/notebooks/test_jpeg_steganography.ipynb
@@ -24,10 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2617dfc7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\Soufiane\\source\\repos\\SF\\Stegano-Flask\\venv\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "✅ Service JPEG Steganography importé avec succès\n",
+      "✅ Service JPEG Steganography importé avec succès\n",
+      "📚 Toutes les bibliothèques importées avec succès !\n",
+      "🕐 Notebook initialisé le : 2025-07-17 22:47:49\n",
+      "📚 Toutes les bibliothèques importées avec succès !\n",
+      "🕐 Notebook initialisé le : 2025-07-17 22:47:49\n"
+     ]
+    }
+   ],
    "source": [
     "# Import des bibliothèques requises\n",
     "import sys\n",
@@ -66,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0550f4dd",
    "metadata": {},
    "outputs": [
@@ -147,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8c6a5bf4",
    "metadata": {},
    "outputs": [
@@ -303,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d9508a2a",
    "metadata": {},
    "outputs": [
@@ -332,9 +347,6 @@
       "   • Métadonnées EXIF : 0 entrées\n",
       "\n",
       "🔧 Dissimulation en cours...\n",
-      "❌ Échec de la dissimulation : Erreur EXIF: a bytes-like object is required, not 'dict'\n",
-      "\n",
-      "============================================================\n",
       "❌ Échec de la dissimulation : Erreur EXIF: a bytes-like object is required, not 'dict'\n",
       "\n",
       "============================================================\n"
@@ -412,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "403b5bc1",
    "metadata": {},
    "outputs": [
@@ -425,7 +437,13 @@
       "📝 Message à cacher : \"Ceci est un message plus long pour tester la méthode LSB (Least Significant Bit)...\"\n",
       "📏 Longueur du message : 375 caractères\n",
       "\n",
-      "📷 Image source : test_image_3.jpg\n",
+      "📷 Image source : test_image_3.jpg\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📷 Image : test_image_3.jpg\n",
       "   • Format : JPEG\n",
       "   • Taille : 1400 x 933 pixels\n",
@@ -439,19 +457,13 @@
       "🔧 Dissimulation LSB en cours...\n",
       "✅ Message caché avec succès !\n",
       "💾 Fichier créé : test_lsb_hidden.jpg\n",
-      "⏱️ Temps de traitement : 0.12 secondes\n",
+      "⏱️ Temps de traitement : 0.18 secondes\n",
       "📊 Détails :\n",
       "   • Méthode : lsb\n",
       "   • Longueur message : 0 caractères\n",
-      "   • Taille originale : 282,373 bytes\n",
-      "   • Nouvelle taille : 467,265 bytes\n",
-      "   • Différence : +184,892 bytes (+65.48%)\n",
-      "   • Vitesse : 0 caractères/seconde\n",
-      "\n",
-      "📋 Informations du fichier avec message caché :\n",
       "✅ Message caché avec succès !\n",
       "💾 Fichier créé : test_lsb_hidden.jpg\n",
-      "⏱️ Temps de traitement : 0.12 secondes\n",
+      "⏱️ Temps de traitement : 0.18 secondes\n",
       "📊 Détails :\n",
       "   • Méthode : lsb\n",
       "   • Longueur message : 0 caractères\n",
@@ -469,6 +481,12 @@
       "   • Métadonnées EXIF : 0 entrées\n",
       "\n",
       "============================================================\n",
+      "   • Taille originale : 282,373 bytes\n",
+      "   • Nouvelle taille : 467,265 bytes\n",
+      "   • Différence : +184,892 bytes (+65.48%)\n",
+      "   • Vitesse : 0 caractères/seconde\n",
+      "\n",
+      "📋 Informations du fichier avec message caché :\n",
       "📷 Image : test_lsb_hidden.jpg\n",
       "   • Format : JPEG\n",
       "   • Taille : 1400 x 933 pixels\n",
@@ -580,10 +598,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e401f904",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Erreur lors de la dissimulation: Erreur EXIF: a bytes-like object is required, not 'dict'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔍 VÉRIFICATION DES FICHIERS DE TEST\n",
+      "=============================================\n",
+      "❌ Fichier EXIF manquant : test_exif_hidden.jpg\n",
+      "✅ Fichier LSB trouvé : test_lsb_hidden.jpg\n",
+      "\n",
+      "🔧 CRÉATION DES FICHIERS DE TEST MANQUANTS\n",
+      "----------------------------------------\n",
+      "📷 Utilisation de l'image source : test_image_1.jpg\n",
+      "\n",
+      "🔧 Création du fichier EXIF...\n",
+      "   📝 Message : \"Ceci est un message secret caché dans les métadonn...\"\n",
+      "   📏 Longueur : 82 caractères\n",
+      "   ❌ Échec de création : Erreur EXIF: a bytes-like object is required, not 'dict'\n",
+      "\n",
+      "✅ Vérification terminée !\n",
+      "=============================================\n"
+     ]
+    }
+   ],
    "source": [
     "# Vérification et création des fichiers de test si nécessaire\n",
     "print(\"🔍 VÉRIFICATION DES FICHIERS DE TEST\")\n",
@@ -707,23 +755,6 @@
       "📁 Fichier : test_lsb_hidden.jpg\n",
       "🔧 Méthode : LSB\n",
       "--------------------------------------------------\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mImpossible d’exécuter le code ; la session a été supprimée. Essayez de redémarrer le noyau."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mImpossible d’exécuter le code ; la session a été supprimée. Essayez de redémarrer le noyau. \n",
-      "\u001b[1;31mPour plus d’informations, consultez Jupyter <a href='command:jupyter.viewOutput'>log</a>."
      ]
     }
    ],
